# RustBot_ZZHoltz

./: .gitignore  .ignore  Cargo.toml  README.md  schema.sql
migrations/: 20230906120618_initial_migration.sql
src/: hum.json  main.rs
src/api/: calls.rs  mod.rs
src/api/client/: init_clients.rs  mod.rs
src/api/pokemons/: mod.rs  pokecalls.rs
src/commands/: add_bullshit.rs  fast_trash.rs  insultes.rs  mod.rs  return_trash_list.rs  welcome.rs
src/commands/admin/: delete_trash.rs  format_list.rs  return_trash_list.rs
src/commands/poke_cmds/: launch_quiz.rs  mod.rs  test.rs
src/commands/poke_cmds/quiz/: generate_questions.rs  mod.rs  quiz_builder.rs  run_quiz.rs
src/commands/quiz_cmds/: launch_quiz.rs  mod.rs
src/commands/shared/: states.rs
src/commands/trash_cmds/: add_bullshit.rs  fast_trash.rs  insultes.rs  mod.rs
src/commands/trash_cmds/admin/: delete_trash.rs  format_list.rs  mod.rs  return_trash_list.rs
src/db/: mod.rs  quiz_sql.rs  redis_db.rs
src/db/connections/: mod.rs  redis_db.rs
src/models/: mod.rs  quiz_logic.rs  quiz_mess.rs  quiz_structs.rs  sentences.rs
static/: hum.json
