[package]
name = "ezholtz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.25.0"
shuttle-runtime = "0.25.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
shuttle-secrets = "0.25.0"
tokio = "1.26.0"
tracing = "0.1.37"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
redis = { version = "0.23.0" }
serde_json = "1.0"
rand = "0.8"
shuttle-static-folder = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres"] }
